# fastmcp-agents

./: .dockerignore  .gitignore  .roomodes  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-mcp-inspector.sh  test_agent_features.py
.github/scripts/: README.md  list-projects.sh  test-scripts.sh
.github/workflows/: docker-publish.yml  on-pr.yml  publish-to-pypi.yml
.roo/: mcp.json
augmented-servers/git/: config.yml
augmented/flows/: triage-issue-outside-world.yml
augmented/servers/: github_issue_search_syntax_summary.md  github_mcp-server.yml  strawgate_filesystem-operations.yml
docs/: agent_git_guide.md  index.md  quickstart.md
docs/advanced/: README.md  readme.md
docs/advanced/cli_only_agents/: README.md
docs/advanced/code_agents/: README.md
docs/advanced/tool_rewriting/: README.md
docs/advanced/yaml_agents/: README.md
docs/bundled/: servers.md
docs/developer/: README.md  agent_types.md  llm_integration.md  memory_management.md
docs/developing/: agents.md  index.md
docs/providers/: gemini.md  vertexai.md
docs/tools/: rewriting.md
docs/usage/: docker.md  ide.md  inspector.md  web_ui.md
docs/wrapping/: cli.md  code.md  config.md
examples/agents/: agents_as_tools.md
examples/augmented_git/: expertise.yml  main.py
fastmcp-agents-bridge/fastmcp_agents_bridge_pydantic_ai/: pyproject.toml
fastmcp-agents-bridge/fastmcp_agents_bridge_pydantic_ai/examples/: time_zone.py
fastmcp-agents-bridge/fastmcp_agents_bridge_pydantic_ai/src/fastmcp_agents/bridge/pydantic_ai/: __init__.py  logging.py  tool.py  toolset.py
fastmcp-agents-bridge/fastmcp_agents_bridge_pydantic_ai/tests/: test_bridge.py
fastmcp-agents-cli/: README.md  config.json  config.yml  mcp.yml  pyproject.toml
fastmcp-agents-cli/src/fastmcp_agents/cli/: main.py  models.py  utils.py
fastmcp-agents-cli/tests/: test_cli.py  test_init.py
fastmcp-agents-core/: README.md  pyproject.toml
fastmcp-agents-core/src/fastmcp_agents/core/agents/: __init__.py  base.py  context.py  task.py
fastmcp-agents-core/src/fastmcp_agents/core/completions/: auto.py  base.py  gemini.py  litellm.py  openai.py  options.py
fastmcp-agents-core/src/fastmcp_agents/core/conversations/: __init__.py  builder.py
fastmcp-agents-core/src/fastmcp_agents/core/errors/: agents.py
fastmcp-agents-core/src/fastmcp_agents/core/models/: server_builder.py
fastmcp-agents-core/src/fastmcp_agents/core/observability/: logging.py
fastmcp-agents-core/src/fastmcp_agents/core/utilities/: helpers.py  mcp.py
fastmcp-agents-core/tests/: test_init.py
fastmcp-agents-library/agents/fastmcp-agents-library-agent-documentation-maintainer/: .gitignore  README.md  pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agent-documentation-maintainer/playground/output/: gather_documentation.json
fastmcp-agents-library/agents/fastmcp-agents-library-agent-documentation-maintainer/tests/: test_agent.py
fastmcp-agents-library/agents/fastmcp-agents-library-agent-elasticsearch/: pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agent-elasticsearch/tests/: test_agent.py
fastmcp-agents-library/agents/fastmcp-agents-library-agent-filesystem-operations/: README.md  pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agent-filesystem-operations/tests/: test_agent.py
fastmcp-agents-library/agents/fastmcp-agents-library-agent-github/: pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agent-github/tests/: test_gather_background.py  test_issue_triage.py  test_issue_triage.py.disabled
fastmcp-agents-library/agents/fastmcp-agents-library-agent-simple-code/: pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agent-simple-code/tests/: conftest.py  test_agent.py
fastmcp-agents-library/agents/fastmcp-agents-library-agents/: README.md  pyproject.toml
fastmcp-agents-library/agents/fastmcp-agents-library-agents/tests/: conftest.py  test_elasticsearch.py  test_filesystem.py  test_github.py  test_simple_code.py
fastmcp-agents-library/agents/fastmcp-agents-library-agents/tests/flows/: test_triage_github_issue.py
fastmcp-agents-library/mcp/fastmcp-agents-library-mcp/: pyproject.toml
fastmcp-agents-library/mcp/fastmcp-agents-library-mcp/tests/: conftest.py
fastmcp-agents-library/mcp/fastmcp-agents-library-mcp/tests/strawgate/: test_elasticsearch_mcp.py  test_filesystem_operations_mcp.py  test_knowledge_base_mcp.py
fastmcp-agents-library/simple_agents/fastmcp-agents-library-simple-agents/: pyproject.toml
fastmcp-agents-library/tools/fastmcp-agents-library-tools-git/: main.py  pyproject.toml
fastmcp_agents/: cli.py  main.py
fastmcp_agents/agent/: __init__.py  base.py  loader.py  types.py
fastmcp_agents/agent/errors/: agent.py  base.py  llm_link.py  loader.py
fastmcp_agents/agent/llm_link/: __init__.py  base.py  lltellm.py
fastmcp_agents/agent/memory/: __init__.py  base.py  disk.py  ephemeral.py
fastmcp_agents/agent/observability/: logging.py
fastmcp_agents/flows/: triage-issue.yml
fastmcp_agents/servers/: cyanheads_git-mcp-server.yml  wrale_mcp-server-tree-sitter.yml
fastmcp_agents/tool_transformer/: README.md  __init__.py  base.py  example-hooks.py  example-overrides-yaml.py  example-overrides.py  loader.py  tool_transformer.py  types.py
scripts/: build.sh  build_and_test.sh  bump.sh  bump_versions.py  clean.sh  lint.sh  sync.sh  sync_dev.sh  test.sh  type-check.sh  update.sh
src/fastmcp_agents/: __init__.py
src/fastmcp_agents/cli/: base.py  (+6 more)
tests/: conftest.py  file1.txt  test_basic_agent.py  test_conversation.py  test_llm_link.py  test_main.py
tests/agent/: conftest.py  test_curator_agent.py  test_multi_step_agent.py
tests/bundled/: conftest.py  test_claude_claude-code-mcp.py  test_code_agent.py  test_cyanheads_git-mcp-server.py  test_flow_github-triage.py  test_github_mcp-server.py  test_motherduck_mcp-server.py  test_strawgate_aider-wrapper-mcp.py  test_strawgate_filesystem-operations-mcp.py  test_strawgate_filesystem-operations.py  test_wrale_tree-sitter-server.py
tests/utils/: github_test_utils.py
(+95 files in other folders)
