[project]
name = "fastmcp-agents"
version = "0.2.4"
description = "Fastmcp Agents Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncclick>=8.1.8",
    "fastmcp>=2.5.2",
    "google-cloud-aiplatform>=1.94.0",
    "google-genai>=1.16.1",
    "jsonref>=1.1.0",
    "litellm>=1.71.0",
    "mcp>=1.9.0",
    "frozenlist==1.6.0", # 1.6.2 not friendly with deepcopy
    "numpydoc>=1.8.0",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[tool.poetry]
packages = [
    { include = "fastmcp_agents", from = "src" }
]
[tool.hatch.metadata]
allow-direct-references=true

[project.scripts]
fastmcp_agents = "fastmcp_agents.cli.base:run_mcp"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff"
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812", 
    "PLR0917", # Ignore too many positional arguments
    "PLR0913", # Ignore too many arguments
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "PLR6301", # Ignore could be class or static method
    "FURB118", # Ignore functions for extracting values from tuple
    "S101", # Ignore asserts in tests
    "ARG002", # Ignore unused arguments
    "S607", # Starting a subprocess with a partial path
    "S603", # Ignore untrusted input in subprocesses
]
"**/references/*" = ["ALL"]
"**/example-*.py" = ["ALL"]
