[project]
name = "fastmcp-agents"
version = "0.5.0"
description = "Fastmcp Agents Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.hatch.metadata]
allow-direct-references=true

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "pygithub>=2.6.1",
  "basedpyright>=1.30.1",

]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["_fastmcp-agents/fastmcp_agents"]

[tool.hatch.build.targets.wheel]
include = ["_fastmcp-agents/fastmcp_agents"]

[tool.hatch.build.targets.wheel.sources]
"_fastmcp-agents/fastmcp_agents" = "fastmcp_agents"

[tool.ruff]
target-version = "py310"
extend-exclude = ["**/.venv/**", "**/playground/**"]

lint.fixable = ["ALL"]
lint.ignore = [
    "COM812", 
    "PLR0917", # Ignore too many positional arguments
    "PLR0913", # Ignore too many arguments
    "ARG002", # Ignore unused arguments
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-s", "-vvv", "--import-mode=importlib"]
pythonpath = ["."]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/**" = [ 
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "PLR6301", # Ignore could be class or static method
    "FURB118", # Ignore functions for extracting values from tuple
    "S101", # Ignore asserts in tests
    "ARG001", # Ignore unused arguments
    "ARG002", # Ignore unused arguments
    "S607", # Starting a subprocess with a partial path
    "S603", # Ignore untrusted input in subprocesses
]
"**/references/*" = ["ALL"]
"**/example-*.py" = ["ALL"]



[tool.uv.workspace]
members = [
    "fastmcp-agents-library/agents/*",
    "fastmcp-agents-library/mcp/*",
    "fastmcp-agents-library/tools/*",
]

[tool.pyright]
typeCheckingMode = "strict"
reportExplicitAny = false
reportMissingTypeStubs = false
include = ["**/tests/*"]
extend-exclude = ["**/.venv/**", "**/playground/**"]

