[project]
name = "fastmcp-agents-cli"
version = "0.5.1"
description = "Fastmcp Agents CLI Package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.22.2",
    "fastmcp-agents-core>=0.4.1",
    "fastmcp>=2.4.5",
    "rich-tables>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_agents"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_agents"]

[tool.hatch.metadata]
allow-direct-references=true


[project.scripts]
fastmcp_agents = "fastmcp_agents.cli.main:root"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "pygithub>=2.6.1",
  "basedpyright>=1.30.1",
]
lint = [
  "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-s -vvv"  # Disable Captures

[tool.ruff]
extend="../pyproject.toml"

[tool.pyright]
extends = "../pyproject.toml"

[tool.uv.sources]
fastmcp-agents-core = { path = "../fastmcp-agents-core", editable = true }
