[project]
name = "fastmcp-agents-agent-strawgate-elasticsearch"
version = "0.5.1"
description = "An agent for interacting with Elasticsearch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp-agents-core",
    "fastmcp-agents-library-mcp",
    "gitpython>=3.1.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_agents"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_agents"]


[tool.uv.sources]
fastmcp-agents-core = { path = "../../../fastmcp-agents-core", editable = true }
fastmcp-agents-library-mcp = { path = "../../../fastmcp-agents-library/mcp/fastmcp-agents-library-mcp", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[project.scripts]
esql-standalone = "fastmcp_agents.library.agent.elasticsearch.esql.standalone:run"
esql-connected = "fastmcp_agents.library.agent.elasticsearch.esql.connected:main"


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"