[project]
name = "fastmcp-agents-agent-strawgate-elasticsearch"
version = "0.5.5"
description = "An agent for interacting with Elasticsearch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp-agents-library-mcp",
    "gitpython>=3.1.44",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fastmcp-agents-library-mcp = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_agents"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_agents"]


[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
esql-agent = "fastmcp_agents.library.agent.elasticsearch.esql.agent:run"
esql-expert = "fastmcp_agents.library.agent.elasticsearch.esql.expert:run"


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"
