[project]
name = "fastmcp-agents-library-agent-elasticsearch"
version = "0.5.7"
description = "An agent for interacting with Elasticsearch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp-agents-library-mcp",
    "fastmcp_agents.bridge.pydantic_ai>=0.1.0",
    "gitpython>=3.1.44",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
fastmcp-agents-library-mcp = { workspace = true }
fastmcp-agents-bridge-pydantic-ai = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastmcp_agents.library.agent.elasticsearch"


[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
esql-agent = "fastmcp_agents.library.agent.elasticsearch.esql.agent:run"
esql-expert = "fastmcp_agents.library.agent.elasticsearch.esql.expert:run"


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"
