[project]
name = "fastmcp-agents-library-agent-github"
version = "0.5.6"
description = "Agents for GitHub"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "asyncstdlib>=3.13.1",
    "fastmcp-agents-library-agent-simple-code",
    "fastmcp-agents-library-mcp",
    "fastmcp-ai-agent-bridge-pydantic-ai>=0.1.2",
    "gitpython>=3.1.44",
]

[project.scripts]
github-investigate-issue = "fastmcp_agents.library.agent.github.investigate_issue:run"
github-gather-background = "fastmcp_agents.library.agent.github.gather_background:run"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-dotenv",
    "ruff>=0.12.4",
]

[tool.uv.sources]
fastmcp-agents-library-agent-simple-code = { workspace = true }
fastmcp-agents-library-mcp = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "skip_on_ci: Skip running the test when running on CI",
]
include =["./tests"]
ignore = ["./playground"]
addopts = "-s" 
env_files = [".env"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastmcp_agents.library.agent.github"

[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"
