[project]
name = "fastmcp-agents-library-agent-simple-code"
version = "0.5.1"
description = "Agents for Simple Code"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastmcp-agents-core[auto]",
    "gitpython>=3.1.44",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
]

[project.scripts]
simple-code = "fastmcp_agents.library.agent.simple_code:main"

[tool.uv.sources]
fastmcp-agents-core = { path = "../../../fastmcp-agents-core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_agents"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_agents"]

[tool.pytest.ini_options]
env = ["COLUMNS=120"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-s -vvv"  # Disable Captures


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"