[project]
name = "fastmcp-agents-library-agent-simple-code"
version = "0.5.6"
description = "Agents for Simple Code"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastmcp-ai-agent-bridge-pydantic-ai>=0.1.2",
    "gitpython>=3.1.44",
    "fastmcp-agents-library-mcp",
]

[project.scripts]
simple-code = "fastmcp_agents.library.agent.simple_code:run"

[tool.uv.sources]
fastmcp-agents-library-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "ruff>=0.12.4",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastmcp_agents.library.agent.simple_code"



[tool.pytest.ini_options]
env = ["COLUMNS=120"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-s -vvv"  # Disable Captures


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"
