[project]
name = "fastmcp-agents-library-mcp"
version = "0.5.5"
description = "MCP Library for FastMCP Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_agents"]

[tool.hatch.build.targets.sdist]
packages = ["src/fastmcp_agents"]



[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]


[tool.ruff]
extend="../../../pyproject.toml"

[tool.pyright]
extends = "../../../pyproject.toml"

