[project]
name = "fastmcp-agents-library-simple-agents"
version = "0.5.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Easton", email = "bill.easton@elastic.co" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fastmcp-agents-library-simple-agents = "fastmcp_agents_library_simple_agents:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastmcp_agents.library.simple_agents"

